cluster/kubernetes-dashboard/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kong
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kong
  ports:
    - protocol: TCP
      port: 433
      targetPort: 8443
