cluster/kubernetes-dashboard/extraobjects-oauth2-proxy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
  - host: oauth2.kotimme.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - oauth2.kotimme.cc
    secretName: oauth2-certs
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  ports:
  - name: oauth2-proxy
    port: 4180
    protocol: TCP
    targetPort: oauth2-proxy
  selector:
    app: oauth2-proxy
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=keycloak-oidc
        - --redirect-url=https://oauth2.kotimme.cc/oauth2/callback
        - --oidc-issuer-url=https://keycloak.kotimme.cc/realms/kotimme
        - --email-domain=*
        #- --allowed-role=<realm role name> // Optional, required realm role
        #- --allowed-role=<client id>:<client role name> // Optional, required client role
        - --allowed-group=admin # Optional, requires group client scope
        - --code-challenge-method=S256 # PKCE

        #- --upstream="http://kubernetes-dashboard-web:8000"
        #- --http-address=0.0.0.0:4180
        #- --reverse-proxy=true
        #- --cookie-refresh=1h # adapt this to your preference
        #- --real-client-ip-header=X-Forwarded-For
        #- --whitelist-domain=".kotimme.cc"
        #- --cookie-domain=".kotimme.cc"
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - name: oauth2-proxy
          containerPort: 4180
          protocol: TCP
